Fix landing page's styling in dark mode

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -1,7 +1,5 @@
 .heroBanner {
   flex: 1 1 auto;
-  color: #444950 !important;
-  background-color: #fefefe !important;
   text-align: center;
   position: relative;
   overflow: hidden;
